# fb2k-discord

./: CMakeLists.txt  main.cpp
libs/foobar/foobar2000/: CMakeLists.txt
libs/foobar/foobar2000/SDK/: CMakeLists.txt
libs/foobar/foobar2000/foobar2000_component_client/: CMakeLists.txt
libs/foobar/foobar2000/helpers/: CMakeLists.txt
libs/foobar/foobar2000/shared/: CMakeLists.txt
libs/foobar/pfc/: CMakeLists.txt
