add_library(foobar2000_SDK
        abort_callback.cpp
        advconfig.cpp
        album_art.cpp
        app_close_blocker.cpp
        audio_chunk.cpp
        audio_chunk_channel_config.cpp
        cfg_var.cpp
        chapterizer.cpp
        commandline.cpp
        completion_notify.cpp
        componentversion.cpp
        config_io_callback.cpp
        config_object.cpp
        console.cpp
        dsp.cpp
        dsp_manager.cpp
        file_cached_impl.cpp
        file_info.cpp
        file_info_impl.cpp
        file_info_merge.cpp
        file_operation_callback.cpp
        filesystem.cpp
        filesystem_helper.cpp
        foosort.cpp
        guids.cpp
        hasher_md5.cpp
        input.cpp
        input_file_type.cpp
        link_resolver.cpp
        main_thread_callback.cpp
        mainmenu.cpp
        mem_block_container.cpp
        menu_helpers.cpp
        menu_item.cpp
        menu_manager.cpp
        metadb.cpp
        metadb_handle.cpp
        metadb_handle_list.cpp
        output.cpp
        packet_decoder.cpp
        playable_location.cpp
        playback_control.cpp
        playlist.cpp
        playlist_loader.cpp
        popup_message.cpp
        preferences_page.cpp
        replaygain.cpp
        replaygain_info.cpp
        service.cpp
        stdafx.cpp
        tag_processor.cpp
        tag_processor_id3v2.cpp
        threaded_process.cpp
        titleformat.cpp
        track_property.cpp
        ui.cpp
        ui_element.cpp
        utility.cpp)

target_include_directories(foobar2000_SDK PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(foobar2000_SDK PRIVATE _UNICODE)
