add_library(foobar2000_helpers STATIC
        AutoComplete.cpp
        AutoComplete.h
        BumpableElem.h
        CDialogResizeHelper.h
        CMakeLists.txt
        COM_utils.h
        CPropVariant.h
        CSingleThreadWrapper.h
        CTableEditHelper-Legacy.cpp
        CTableEditHelper-Legacy.h
        CallForwarder.h
        CmdThread.h
        DarkMode.cpp
        DarkMode.h
        ProcessUtils.h
        ProfileCache.h
        StdAfx.cpp
        StdAfx.h
        ThreadUtils.cpp
        ThreadUtils.h
        VisUtils.cpp
        VisUtils.h
        VolumeMap.cpp
        VolumeMap.h
        WindowPositionUtils.h
        advconfig_impl.h
        advconfig_runtime.h
        album_art_helpers.h
        atl-misc.h
        audio_render_float.h
        bitreader_helper.h
        cfg_guidlist.h
        create_directory_helper.cpp
        create_directory_helper.h
        cue_creator.cpp
        cue_creator.h
        cue_parser.cpp
        cue_parser.h
        cue_parser_embedding.cpp
        cuesheet_index_list.cpp
        cuesheet_index_list.h
        dialog_resize_helper.cpp
        dialog_resize_helper.h
        dropdown_helper.cpp
        dropdown_helper.h
        duration_counter.h
        dynamic_bitrate_helper.cpp
        dynamic_bitrate_helper.h
        fb2k_threads.h
        fb2k_wfx.h
        fileReadAhead.h
        file_cached.h
        file_info_const_impl.cpp
        file_info_const_impl.h
        file_list_helper.cpp
        file_list_helper.h
        file_move_helper.cpp
        file_move_helper.h
        file_readonly.h
        file_win32_wrapper.cpp
        file_win32_wrapper.h
        filetimetools.cpp
        filetimetools.h
        foobar2000+atl.h
        fullFileBuffer.h
        helpers.h
        icon_remapping_wildcard.h
        image_load_save.cpp
        image_load_save.h
        inplace_edit.cpp
        inplace_edit.h
        input_fix_seeking.h
        input_helper_cue.cpp
        input_helper_cue.h
        input_helpers.cpp
        input_helpers.h
        input_logging.h
        input_stream_info_reader.h
        meta_table_builder.h
        metadb_handle_set.h
        metadb_io_hintlist.h
        mp3_utils.cpp
        mp3_utils.h
        packet_decoder_aac_common.cpp
        packet_decoder_aac_common.h
        packet_decoder_mp3_common.cpp
        packet_decoder_mp3_common.h
        playlist_position_reference_tracker.h
        reader_pretend_nonseekable.h
        readers.cpp
        readers.h
        rethrow.h
        seekabilizer.cpp
        seekabilizer.h
        stream_buffer_helper.cpp
        stream_buffer_helper.h
        tag_write_callback_impl.h
        text_file_loader.cpp
        text_file_loader.h
        text_file_loader_v2.cpp
        text_file_loader_v2.h
        track_property_callback_impl.cpp
        track_property_callback_impl.h
        ui_element_helpers.cpp
        ui_element_helpers.h
        win32_dialog.cpp
        win32_dialog.h
        win32_misc.cpp
        win32_misc.h
        window_placement_helper.cpp
        window_placement_helper.h
        winmm-types.h
        writer_wav.cpp
        writer_wav.h)

#target_include_directories(foobar2000_helpers PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(foobar2000_helpers PRIVATE _UNICODE UNICODE)
